--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pemesanan Pizza</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="image/PizzaIcon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="PizzaIcon.png" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -23,7 +23,7 @@
 
     <section>
         <h2>Promo Hari Ini</h2>
-        <img src="./image/diskonimage.png" alt="Promo Pizza" width="300">
+        <img src="diskonimage.png" alt="Promo Pizza" width="300">
         <p><mark>Diskon 30%</mark>Untuk Semua Pizza Ukuran Besar!</p>
         <ul>
             <li>Rotinya Empuk</li>
@@ -107,4 +107,5 @@
 
 </body>
 </html>
+
 
